force-app/main/default/objects/Opportunity/fields/Accelero_MSLA_SOW__c.field-meta.xml
<CustomField>
    <fullName>Accelero_MSLA_SOW__c</fullName>
    <inlineHelpText>Master Services &amp; License (MSLA) &amp; Statement of Work (SOW)</inlineHelpText>
    <label>Accelero MSLA/SOW</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>