force-app/main/default/objects/Opportunity/fields/Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Access_Level__c</fullName>
    <label>Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Access</fullName>
            </value>
            <value>
                <fullName>Access to Gatekeeper</fullName>
            </value>
            <value>
                <fullName>Access to Gatekeeper and Support Staff</fullName>
            </value>
            <value>
                <fullName>Access to Surgeon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>