force-app/main/default/objects/Opportunity/fields/Account_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Account_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account # Confirmation</label>
    <type>Checkbox</type>
</CustomField>