force-app/main/default/objects/Opportunity/fields/Account_Marketing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Account_Marketing_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Marketing Contact</label>
    <type>Checkbox</type>
</CustomField>