force-app/main/default/objects/Opportunity/fields/Account_Request_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>Account_Request_Form_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Request Form Received</label>
    <type>Checkbox</type>
</CustomField>