force-app/main/default/objects/Opportunity/fields/Account_Verification__c.field-meta.xml
<CustomField>
    <fullName>Account_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the Opportunity aligned to the correct Account with ZB Account #</inlineHelpText>
    <label>Account Verification</label>
    <type>Checkbox</type>
</CustomField>