force-app/main/default/objects/Opportunity/fields/Account_Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Verification_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Verification Date</label>
    <type>Date</type>
</CustomField>