force-app/main/default/objects/Opportunity/fields/Account_Verification_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Verification_Formula__c</fullName>
    <formula>(CloseDate - Account_Verification_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Verification Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>