force-app/main/default/objects/Opportunity/fields/Acct_Creation_form_sent_to_Accountholder__c.field-meta.xml
<CustomField>
    <fullName>Acct_Creation_form_sent_to_Accountholder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acct.Creation form sent to Accountholder</label>
    <type>Checkbox</type>
</CustomField>