force-app/main/default/objects/Opportunity/fields/Achieved_Final_Decision_Maker_Support__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Final_Decision_Maker_Support__c</fullName>
    <label>Achieved Final Decision Maker Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>