force-app/main/default/objects/Opportunity/fields/Action_Resides_With__c.field-meta.xml
<CustomField>
    <fullName>Action_Resides_With__c</fullName>
    <label>Action Resides With</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Rep</fullName>
            </value>
            <value>
                <fullName>ZB Connect Capital Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>