force-app/main/default/objects/Opportunity/fields/Admin_Champ_Contact_Complete__c.field-meta.xml
<CustomField>
    <fullName>Admin_Champ_Contact_Complete__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Administrative Champ Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Admin Champ Contact Complete)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>