force-app/main/default/objects/Opportunity/fields/Administrative_Champ_Contact_Notes__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Champ_Contact_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Administrative Champ Contact Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>