force-app/main/default/objects/Opportunity/fields/AI_Data_Analytics_Competitors__c.field-meta.xml
<CustomField>
    <fullName>AI_Data_Analytics_Competitors__c</fullName>
    <description>MIS</description>
    <label>AI/Data Analytics Competitors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6.	Stryker</fullName>
            </value>
            <value>
                <fullName>7.	Storz</fullName>
            </value>
            <value>
                <fullName>8.	Arthrex</fullName>
            </value>
            <value>
                <fullName>9.	Smith &amp; Nephew</fullName>
            </value>
            <value>
                <fullName>10.	Steris</fullName>
            </value>
            <value>
                <fullName>11.	Skytron</fullName>
            </value>
            <value>
                <fullName>12.	Trumpf</fullName>
            </value>
            <value>
                <fullName>13.	Olympus</fullName>
            </value>
            <value>
                <fullName>14.	Conmed</fullName>
            </value>
            <value>
                <fullName>15.	Gettinge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>