force-app/main/default/objects/Opportunity/fields/AI_Data_Analytics_Revenue__c.field-meta.xml
<CustomField>
    <fullName>AI_Data_Analytics_Revenue__c</fullName>
    <label>AI &amp; Data Analytics Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>