force-app/main/default/objects/Opportunity/fields/Align_Growth_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Align_Growth_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Align Growth Opportunity</label>
    <type>Checkbox</type>
</CustomField>