force-app/main/default/objects/Opportunity/fields/Amount_Annual_Value__c.field-meta.xml
<CustomField>
    <fullName>Amount_Annual_Value__c</fullName>
    <label>Amount (Annual Value)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>