force-app/main/default/objects/Opportunity/fields/Amount_Custom__c.field-meta.xml
<CustomField>
    <fullName>Amount_Custom__c</fullName>
    <label>AMOUNT(CY BASED ON CLOSE DATE)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>