force-app/main/default/objects/Opportunity/fields/Analyst__c.field-meta.xml
<CustomField>
    <fullName>Analyst__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Analyst</label>
    <length>100</length>
    <type>Text</type>
</CustomField>