force-app/main/default/objects/Opportunity/fields/Analytics_Dont_Include__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Dont_Include__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To allow us to set a filter in Einstein so certain opps dont get included</description>
    <label>Analytics Dont Include</label>
    <type>Checkbox</type>
</CustomField>