force-app/main/default/objects/Opportunity/fields/Annual_Cases_per_Year__c.field-meta.xml
<CustomField>
    <fullName>Annual_Cases_per_Year__c</fullName>
    <label>Annual Cases per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>