force-app/main/default/objects/Opportunity/fields/Annual_Consumable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Consumable_Amount__c</fullName>
    <description>Surgical field to get a total of all products on an opportunity in the consumable group</description>
    <label>Annual Consumable Amount</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Amount_Categories__c</field>
        <operation>equals</operation>
        <value>Consumable</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>