force-app/main/default/objects/Opportunity/fields/Annual_Unit_Commitment_3__c.field-meta.xml
<CustomField>
    <fullName>Annual_Unit_Commitment_3__c</fullName>
    <label>Annual Unit Commitment 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>