force-app/main/default/objects/Opportunity/fields/Annual_Warranty_Service_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Warranty_Service_Amount__c</fullName>
    <description>Surgical field to total the value of products in the warranty/service category</description>
    <label>Annual Warranty/Service Amount</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Amount_Categories__c</field>
        <operation>equals</operation>
        <value>Warranty/Service</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>