force-app/main/default/objects/Opportunity/fields/ANZ_Priority__c.field-meta.xml
<CustomField>
    <fullName>ANZ_Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WHITE CHIP</fullName>
                <color>#FFFFFF</color>
                <label>WHITE CHIP</label>
            </value>
            <value>
                <fullName>BLUE CHIP</fullName>
                <color>#0B24BE</color>
                <label>BLUE CHIP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>