force-app/main/default/objects/Opportunity/fields/AP_ANZ_Super_Priority_del__c.field-meta.xml
<CustomField>
    <fullName>AP_ANZ_Super_Priority_del__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used specifically for ANZ sales plans/opportunities to indicate that this opportunity is the best chance / highest value.</description>
    <inlineHelpText>Select if this Sales Plan is your Best Chance, Highest Value Opportunity</inlineHelpText>
    <label>Super Priority</label>
    <type>Checkbox</type>
</CustomField>