force-app/main/default/objects/Opportunity/fields/Apple_Connected__c.field-meta.xml
<CustomField>
    <fullName>Apple_Connected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apple Connected</label>
    <type>Checkbox</type>
</CustomField>