force-app/main/default/objects/Opportunity/fields/Approval_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approval_Amount__c</fullName>
    <description>Capital Solutions lender approval amount</description>
    <label>Approval Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>