force-app/main/default/objects/Opportunity/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RSM</fullName>
            </value>
            <value>
                <fullName>VP of Sales &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>GM/VP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>