force-app/main/default/objects/Opportunity/fields/ASC__c.field-meta.xml
<CustomField>
    <fullName>ASC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASC</label>
    <type>Checkbox</type>
</CustomField>