force-app/main/default/objects/Opportunity/fields/ASC_Management_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>ASC_Management_Group_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ASC Management Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>