force-app/main/default/objects/Opportunity/fields/ASC_Management_Software__c.field-meta.xml
<CustomField>
    <fullName>ASC_Management_Software__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASC Management Software</label>
    <type>Checkbox</type>
</CustomField>