force-app/main/default/objects/Opportunity/fields/ASC_Management_Software_Type__c.field-meta.xml
<CustomField>
    <fullName>ASC_Management_Software_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ASC Management Software Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>