force-app/main/default/objects/Opportunity/fields/ASC_MGT_GRP_Involved_No_Ownership_stake__c.field-meta.xml
<CustomField>
    <fullName>ASC_MGT_GRP_Involved_No_Ownership_stake__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASC MGT GRP Involved, No Ownership stake</label>
    <type>Checkbox</type>
</CustomField>