force-app/main/default/objects/Opportunity/fields/ASC_Referral__c.field-meta.xml
<CustomField>
    <fullName>ASC_Referral__c</fullName>
    <label>ASC Referral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>