force-app/main/default/objects/Opportunity/fields/ASC_Target__c.field-meta.xml
<CustomField>
    <fullName>ASC_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASC Target</label>
    <type>Checkbox</type>
</CustomField>