force-app/main/default/objects/Opportunity/fields/ASC_URL__c.field-meta.xml
<CustomField>
    <fullName>ASC_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ASC URL</label>
    <type>Url</type>
</CustomField>