force-app/main/default/objects/Opportunity/fields/ASP__c.field-meta.xml
<CustomField>
    <fullName>ASP__c</fullName>
    <label>ASP</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>