force-app/main/default/objects/Opportunity/fields/At_Risk_Reasons__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Reasons__c</fullName>
    <label>At Risk Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>GPO/IDN contract</fullName>
            </value>
            <value>
                <fullName>Local contract</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>