force-app/main/default/objects/Opportunity/fields/Attachment_Added__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Added__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Attachment Added</label>
    <type>Date</type>
</CustomField>