force-app/main/default/objects/Opportunity/fields/Avalanche_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Avalanche_Segmentation__c</fullName>
    <description>New field created for Canada Opportunity</description>
    <inlineHelpText>Avalanche Segmentation Rules 
Platinum (High volume, High share) 
Gold (High volume, Low share) 
Silver (Low volume, High share) 
Bronze (Low volume, Low share)</inlineHelpText>
    <label>Avalanche Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>