force-app/main/default/objects/Opportunity/fields/Average_of_Cases_on_highest_Volume_day__c.field-meta.xml
<CustomField>
    <fullName>Average_of_Cases_on_highest_Volume_day__c</fullName>
    <inlineHelpText>Average # of Cases on highest Volume day of the week fill in</inlineHelpText>
    <label>Average # of Cases on highest Volume day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>