force-app/main/default/objects/Opportunity/fields/Average_of_Cases_Persona_fill_in__c.field-meta.xml
<CustomField>
    <fullName>Average_of_Cases_Persona_fill_in__c</fullName>
    <label>Average # of Cases on highest Volume day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>