force-app/main/default/objects/Opportunity/fields/AVP_Forecast_Judgement__c.field-meta.xml
<CustomField>
    <fullName>AVP_Forecast_Judgement__c</fullName>
    <label>Zone VP Forecast Judgement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Gut</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>IN+</fullName>
                <label>IN</label>
            </value>
            <value>
                <fullName>OUT+</fullName>
                <label>OUT</label>
            </value>
            <value>
                <fullName>UP</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>