force-app/main/default/objects/Opportunity/fields/BAA__c.field-meta.xml
<CustomField>
    <fullName>BAA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BAA</label>
    <type>Date</type>
</CustomField>