force-app/main/default/objects/Opportunity/fields/Backflow_Preventer__c.field-meta.xml
<CustomField>
    <fullName>Backflow_Preventer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backflow Preventer</label>
    <type>Checkbox</type>
</CustomField>