force-app/main/default/objects/Opportunity/fields/Backgound_Previous_activities_meetings__c.field-meta.xml
<CustomField>
    <fullName>Backgound_Previous_activities_meetings__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Backgound (Previous activities, meetings</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>