force-app/main/default/objects/Opportunity/fields/Bank_PO_Requested__c.field-meta.xml
<CustomField>
    <fullName>Bank_PO_Requested__c</fullName>
    <label>Deal Desk Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>