force-app/main/default/objects/Opportunity/fields/Bargain_Purchase_Option__c.field-meta.xml
<CustomField>
    <fullName>Bargain_Purchase_Option__c</fullName>
    <label>Bargain Purchase Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>