force-app/main/default/objects/Opportunity/fields/Board_Meeting_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Board_Meeting_Cadence__c</fullName>
    <description>How often does the board meet?</description>
    <label>Board Meeting Cadence</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>