force-app/main/default/objects/Opportunity/fields/Booms_And_Lights_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Booms_And_Lights_Competitors__c</fullName>
    <description>MIS</description>
    <label>Booms And Lights Competitors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stryker</fullName>
            </value>
            <value>
                <fullName>Steris</fullName>
            </value>
            <value>
                <fullName>Skytron</fullName>
            </value>
            <value>
                <fullName>Trumpf</fullName>
            </value>
            <value>
                <fullName>Olympus</fullName>
            </value>
            <value>
                <fullName>Gettinge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>