force-app/main/default/objects/Opportunity/fields/Booms_Lights_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Booms_Lights_Revenue__c</fullName>
    <label>Booms &amp; Lights Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>