force-app/main/default/objects/Opportunity/fields/BP_Opportunity_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>BP_Opportunity_Product_Group__c</fullName>
    <formula>CASE(RecordType.Name 
,&quot;US Hip&quot;, &quot;Hips&quot;, 
&quot;US Knee&quot;, &quot;Knees&quot;, 
&quot;US Extremities&quot;, &quot;Extremities&quot;, 
&quot;US Cement&quot;, &quot;Cement&quot;, 
&quot;US Sports Medicine&quot;, &quot;Sports Medicine&quot;, 
&quot;US Trauma&quot;, &quot;Trauma&quot;, 
&quot;US Early Intervention&quot;, &quot;Early Intervention&quot;,
&quot;US Foot and Ankle&quot;, &quot;Foot &amp; Ankle&quot;, 
&quot;US Ortho Surgical&quot;, &quot;Surgical&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BP Opportunity Product Group</label>
    <type>Text</type>
</CustomField>