force-app/main/default/objects/Opportunity/fields/BP_Target__c.field-meta.xml
<CustomField>
    <fullName>BP_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BP Target</label>
    <type>Checkbox</type>
</CustomField>