force-app/main/default/objects/Opportunity/fields/Budget_Approved__c.field-meta.xml
<CustomField>
    <fullName>Budget_Approved__c</fullName>
    <label>Budget Approved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>