force-app/main/default/objects/Opportunity/fields/Business_Associate_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Business_Associate_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Associate Agreement</label>
    <type>Checkbox</type>
</CustomField>