force-app/main/default/objects/Opportunity/fields/Business_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Customer_Type__c</fullName>
    <description>This Field is Added to To New Global Pipeline Recon</description>
    <label>Business/Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>New Business to New Customers</fullName>
            </value>
            <value>
                <fullName>New Business to Existing Customers</fullName>
            </value>
            <value>
                <fullName>Existing Business to Existing Customers</fullName>
            </value>
            <value>
                <fullName>Replacement Product to Existing Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>