force-app/main/default/objects/Opportunity/fields/Business_Plan__c.field-meta.xml
<CustomField>
    <fullName>Business_Plan__c</fullName>
    <formula>CASESAFEID(Product_Sales_Summary__r.Business_Plan__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Plan</label>
    <type>Text</type>
</CustomField>