force-app/main/default/objects/Opportunity/fields/Business_Plan_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Business_Plan_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this creates a relationship between the opportunity object and &apos;business plan&apos; object</description>
    <label>Business Plan Lookup</label>
    <referenceTo>Business_Plan__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>