force-app/main/default/objects/Opportunity/fields/Business_Plan_Presented__c.field-meta.xml
<CustomField>
    <fullName>Business_Plan_Presented__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Plan Presented</label>
    <type>Date</type>
</CustomField>